--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "sweetalert2": "^11.10.5",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
