--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.5",
     "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "3.4.1",
